	13413 Naght_Seiger_Twin_Edge_	5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	1185 Violet_Fear		5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2009/07/02
	* Fixed a bug in Ifrit's drops (bugreport:3319) [Playtester]
2009/06/29
	* Updated drops to the released official bRO 12.1 drops [Playtester]
2009/06/15
	* Updated mob_db [Playtester]
	- fixed various ATK2 values (bugreport:3185)
	- Frilldora is finally angry again (bugreport:3243)
2009/06/12
	* Fixed the Memory Book combo using Eye Patch instead of Monocle (bugreport:3237) [Playtester]
2009/06/08
	* Fixed Radiant Wisdom giving double as much HP/SP than it should [Playtester]
	- it will give 100 HP and 50 SP every 2 seconds for 10 seconds when it activates
	* Fixed up the first set of Battle Ground armors [Playtester]
	- reduced guessed chances from 5% to 0.5%
	- fixed valorous huuma only giving 10% attack bonus instead of 100%
2009/06/07
	* Fixed up the first set of Battle Ground weapons [Playtester]
	- reduced guessed chances from 5% to 0.5%
	- some bonuses might still not work
	* Fixed Ring of Flame Lord casting LK_CONCENTRATION instead of CH_SOULCOLLECT (bugreport:3199) [Playtester]
	- also reduced level of MO_EXPLOSIONSPIRITS to 1
2009/06/04
	* Rev. 13843 Added skill information for NPC_HELLPOWER and NPC_WIDEHELLDIGNITY, and enabled skills in mob_skill_db. [L0ne_W0lf]
2009/06/03
	* Rev. 13842 Fixed Party Assumptio scroll casting level 10 assumptio. [L0ne_W0lf]
2009/06/02
	* Rev. 13840 Misc updates, and updates for party buff items. [L0ne_W0lf]
	- Added CASH_BLESSING, CASH_INCAGI and CASH_ASSUMPTIO skills.
	- Added itemskill commands for the party buff scrolls.
	- Corrected Equipment repair book's itemtype to 11.
2009/05/29
	* Rev. 13825 Removed an extra comma from chocolate_pie. [L0ne_W0lf]